--- a/pets/templates/pets/lion_selection.html
+++ b/pets/templates/pets/lion_selection.html
@@ -109,13 +109,12 @@ Lion
 {% block body %}
 <div class="card-container">
     <div class="card">
-        <img src="https://drive.google.com/uc?export=view&id=1f1e6glQL-fWbxccOz3F1k9_H2yL3vZ7I"             alt="Card Image" class="card__image">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9b/House_sparrow_male_in_Prospect_Park_%2853532%29.jpg/1024px-House_sparrow_male_in_Prospect_Park_%2853532%29.jpg"             alt="Card Image" class="card__image">
 
         <div class="card__content">
             <!-- Add the image using the <img> tag and provide the path to the image -->
-            <p class="card__title">Siamese cat</p>
-            <p class="card__description">Siamese cats, affectionately known as "Meezers," are small-to-medium sized cats
-                that weigh 8 to 14 pounds when they're full grown.</p>
+            <p class="card__title">House sparrow</p>
+            <p class="card__description">The house sparrow (Passer domesticus) is a bird of the sparrow family Passeridae, found in most parts of the world. It is a small bird that has a typical length of 16 cm (6.3 in) and a mass of 24–39.5 g (0.85–1.39 oz). </p>
             <button class="card__button"> Explore</button>
         </div>
     </div>
