--- a/pets/templates/pets/backup.html
+++ b/pets/templates/pets/backup.html
@@ -2,8 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %} {% endblock %}</title>
+    <title>Dogs</title>
     <style>
+    .card__button {
+        margin-top: 10px;
+        padding: 8px 16px;
+        background-color: #f89b29;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        font-size: 16px; /* You can adjust the font size as needed */
+        font-weight: bold; /* You can adjust the font weight as needed */
+    }
+
+    .card__button:hover {
+        background-color: #ff0f7b;
+    }
     .headbutton {
         --primary-color: #645bff;
         --secondary-color: #fff;
@@ -97,7 +113,93 @@
     display: flex;
     gap: 10px; /* Adjust the gap as per your requirement */
 }
-{% block css %} {% endblock %}
+ .card__image {
+  width: 90%;
+  height: 80%;
+  object-fit: cover;
+}
+    .card__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+
+    .card-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin: 30px;
+    }
+    .card {
+  position: relative;
+  width: 300px;
+  height: 200px;
+  background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+  margin-bottom: 20px;
+
+}
+
+.card svg {
+  width: 48px;
+  fill: #333;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+.card:hover {
+  transform: rotate(-5deg) scale(1.1);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  opacity:1;
+}
+
+.card__content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-45deg);
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: #fff;
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+    align-items: center;
+  justify-content: center;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+.card:hover .card__content {
+  transform: translate(-50%, -50%) rotate(0deg);
+  opacity: 1;
+}
+
+.card__title {
+  margin: 0;
+  font-size: 24px;
+  color: #333;
+  font-weight: 700;
+}
+
+.card__description {
+  margin: 10px 0 0;
+  font-size: 14px;
+  color: #777;
+  line-height: 1.4;
+}
+
+.card:hover svg {
+  scale: 0;
+  transform: rotate(-45deg);
+}
     </style>
     <link
             rel="stylesheet"
@@ -138,7 +240,6 @@
 
 </div>
 
-{% block body %} {% endblock %}
 
 
 </body>
