--- a/pets/templates/pets/dog_selection.html
+++ b/pets/templates/pets/dog_selection.html
@@ -50,6 +50,7 @@ Dogs
   overflow: hidden;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
   margin-bottom: 20px;
+
 }
 
 .card svg {
@@ -61,6 +62,7 @@ Dogs
 .card:hover {
   transform: rotate(-5deg) scale(1.1);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  opacity:1;
 }
 
 .card__content {
