--- a/pets/templates/pets/basic.html
+++ b/pets/templates/pets/basic.html
@@ -99,6 +99,7 @@
 }
 {% block css %} {% endblock %}
     </style>
+    {% block head %}{% endblock %}
     <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Irish Grover:wght@400&display=swap"
