--- a/pets/templates/pets/dog_selection.html
+++ b/pets/templates/pets/dog_selection.html
@@ -115,7 +115,7 @@ Dogs
 
   <div class="card__content">
     <!-- Add the image using the <img> tag and provide the path to the image -->
-    <p class="card__title">German Shephard</p>
+    <p class="card__title">German Shephar</p>
     <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
   <button class="card__button"> Explore </button>
   </div>
